objects/Device_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Device_Plan_Id__c</fullName>
        <externalId>true</externalId>
        <label>Device Plan Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Device Plans</relationshipLabel>
        <relationshipName>Device_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipLabel>Device Plans</relationshipLabel>
        <relationshipName>Device_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Device Plans</relationshipLabel>
        <relationshipName>Device_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Device Plan</label>
    <nameField>
        <label>Device Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>